--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><title>React App</title><script defer="defer" src="/waifu-app/static/js/main.85def7a0.js"></script></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><title>React App</title><script defer="defer" src="/waifu-app/static/js/main.f454d68c.js"></script><link href="/waifu-app/static/css/main.c3db8b29.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
