--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <title>React App</title>
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+    integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
+    crossorigin="anonymous"
+  />
+  <link
+    href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
+    rel="stylesheet"
+  />
   </head>
   <body>
     <div id="root"></div>
