--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
-    <title>React App</title>
+    <link rel="shortcut icon" type="image/svg"href="%PUBLIC_URL%/image/ico.png"/>
+
+    <title>WAIFU APP</title>
     <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
