--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Last-Modified" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    
     <link rel="shortcut icon" type="image/svg"href="%PUBLIC_URL%/image/ico.png"/>
 
     <title>WAIFU APP</title>
@@ -14,6 +19,7 @@
     href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
     rel="stylesheet"
   />
+
   </head>
   <body>
     <div id="root"></div>
