info data / Desing v0.0.1

--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Expires" content="0">
-    <meta http-equiv="Last-Modified" content="0">
-    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    
-    <link rel="shortcut icon" type="image/svg"href="%PUBLIC_URL%/image/ico.png"/>
 
-    <title>WAIFU APP</title>
-    <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
-    integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
-    crossorigin="anonymous"
-  />
-  <link
-    href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
-    rel="stylesheet"
-  />
+<head>
+  <meta http-equiv="Expires" content="0">
+  <meta http-equiv="Last-Modified" content="0">
+  <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+  <meta http-equiv="Pragma" content="no-cache">
 
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+  <link rel="shortcut icon" type="image/svg" href="%PUBLIC_URL%/image/ico.png" />
+
+  <title>WAIFU APP</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+    integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
+
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet" />
+
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
